[gd_scene load_steps=18 format=3 uid="uid://baha54hytun71"]

[ext_resource type="Script" path="res://objects/player.gd" id="1_hts85"]
[ext_resource type="Texture2D" uid="uid://bl57orunb7rxf" path="res://assets/game_tilemap_packed.png" id="1_mx4gh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2eus"]
atlas = ExtResource("1_mx4gh")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv6pb"]
atlas = ExtResource("1_mx4gh")
region = Rect2(16, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2qeo"]
atlas = ExtResource("1_mx4gh")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8jpk"]
atlas = ExtResource("1_mx4gh")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq6gp"]
atlas = ExtResource("1_mx4gh")
region = Rect2(96, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x3oh"]
atlas = ExtResource("1_mx4gh")
region = Rect2(96, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vphbu"]
atlas = ExtResource("1_mx4gh")
region = Rect2(96, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_568pp"]
atlas = ExtResource("1_mx4gh")
region = Rect2(96, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lavan"]
atlas = ExtResource("1_mx4gh")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkdrm"]
atlas = ExtResource("1_mx4gh")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuwvl"]
atlas = ExtResource("1_mx4gh")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5km8"]
atlas = ExtResource("1_mx4gh")
region = Rect2(64, 192, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f02rn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2eus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv6pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2qeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8jpk")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq6gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x3oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vphbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_568pp")
}],
"loop": true,
"name": &"duck",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lavan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkdrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuwvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5km8")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tac43"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fhr8x"]
radius = 3.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hts85")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_f02rn")
animation = &"duck"
autoplay = "default"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_tac43")

[node name="DuckCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
rotation = 1.5708
shape = SubResource("CircleShape2D_fhr8x")

[node name="DuckTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DuckTimer" to="." method="_on_duck_timer_timeout"]
